tambah listener dan reporting