@@ -9,24 +9,29 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
 dependencies {
-    // Make Selenium available to main sources (LoginPage uses Selenium)
     implementation 'org.seleniumhq.selenium:selenium-java:4.15.0'
 
-    // Test dependencies
     testImplementation 'org.testng:testng:7.4.0'
     testImplementation 'org.apache.poi:poi:5.0.0'
     testImplementation 'org.apache.poi:poi-ooxml:5.0.0'
     testImplementation 'org.assertj:assertj-core:3.24.1'
     implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
-
+    implementation 'com.aventstack:extentreports:5.0.9'
 }
 
 test {
     useTestNG {
-        suites 'src/test/resources/testng.xml'
+        suites 'src/test/resources/test-regression.xml'
     }
+
+     jvmArgs += ["--enable-preview"]
 }
 
 tasks.register('runTests') {
